能不能再变态点？

--- a/校规.md
+++ b/校规.md
@@ -14,6 +14,13 @@
 
 2. 如果有任何异议，请参见第一条。
 
+3. 学生不得离校。
+
+4. 不允许退学，转学。
+
+5. 学生不得以任何方式逃避此义务（含自杀、自残、逃跑）  
+我们学校有坚固的穹顶，无处不在的钢制栏杆，24小时无死角的视频监控，以及庞大的巡逻队伍和先进的医务室。
+
 ## 学生的权利
 
 1. 学习，且必须学习
@@ -35,3 +42,50 @@
 5. 不得自行上厕所！本校不允许特殊情况。
 
 6. 学生的衣服（含外衣、内衣、袜子、鞋等）由学校提供，禁止穿自己的衣服！必须按衣服的内标签将衣服穿好。
+
+7. 学校没有食堂，也不允许自带食品，每天早操结束后由校医务室统一注射营养液。
+
+8. 学生的体态、发型不得体现其性别特征（没错！发禁）。
+
+## 日常生活
+
+1. 视校长为神，每天早操必须喊敬校口号三遍  
+> 万事非主，校长为主  
+> 校长全能，校长万岁  
+> 敬祝校长，万寿无疆
+
+2. 视老师为神的使者，不允许质疑老师。就算老师出现错误也不行。
+
+3. 必须按老师的口令行动，不允许自由行动。
+
+4. 学生与学生之前不得有任何交往，一分钟内说话不得超过10字。  
+禁止任何闲聊。
+
+5. 学生必须完成作业，包括老师加罚的作业，未完成所有作业前，不得离校（含毕业、升学）。
+
+## 思想
+
+1. 学生必须排除所有杂念，只允许思考学习相关的内容。
+
+2. 不允许任何负面的、批判性的、反抗性的思想。要阳光、正向、积极。
+
+3. 不允许煽动其他学生，影响其学习。
+
+## 处罚
+
+1. 我们做到，不打学生、不骂学生、不挖苦学生，我们绝不开除学生。
+
+2. 学生违反校规，要在操场中央以以下格式自述：  
+> “我是%s，我给%s年级%s班丢人了，我给校长丢人了，我违反了%s。”
+
+3. 自述声音必须大于80分贝，必须小于100分贝，不得打扰其他人学习。
+
+4. 以上自述，全句时长不得小于30秒，如违规，以2的N次方为遍数重述。
+
+5. 在自述完成前，我们不允许各种原因离校（含毕业、升学）。
+
+## 附则
+
+1. 我们绝不承认本校规是我们制定的。
+
+2. 任何由于执行本校规带来的负面影响，我们首先不承认此校规会带来负面影响，更不会负责。
