--- a/校规.md
+++ b/校规.md
@@ -18,7 +18,7 @@
 
 4. 不允许退学，转学。
 
-5. 学生不得以任何方式逃避此义务（含自杀、自残、逃跑）  
+5. 学生不得以任何方式逃避此义务（含自杀、自残、逃跑、生病）  
 我们学校有坚固的穹顶，无处不在的钢制栏杆，24小时无死角的视频监控，以及庞大的巡逻队伍和先进的医务室。
 
 ## 学生的权利
