--- a/校规.md
+++ b/校规.md
@@ -58,7 +58,7 @@
 
 3. 必须按老师的口令行动，不允许自由行动。
 
-4. 学生与学生之前不得有任何交往，一分钟内说话不得超过10字。  
+4. 学生与学生之间不得有任何交往，一分钟内说话不得超过10字。  
 禁止任何闲聊。
 
 5. 学生必须完成作业，包括老师加罚的作业，未完成所有作业前，不得离校（含毕业、升学）。
